--- a/scss/utilities/_visibility.scss
+++ b/scss/utilities/_visibility.scss
@@ -1,7 +1,9 @@
 // Visibility utilities
-.invisible {
-    @include invisible();
-}
-.visible {
-    @include visible();
+@if $enable-utility-visibility {
+    .invisible {
+        @include invisible();
+    }
+    .visible {
+        @include visible();
+    }
 }
