--- a/scss/core/_code.scss
+++ b/scss/core/_code.scss
@@ -1,49 +1,49 @@
-// Inline and block code styles
-code,
-kbd,
-pre,
-samp {
-    font-family: $font-family-monospace;
-}
-
-// Inline code
-code {
-    padding: $code-padding-y $code-padding-x;
-    @include font-size($code-font-size);
-    color: $code-color;
-    background-color: $code-bg;
-    @include border-radius($border-radius);
-}
-
-// User input typically entered via keyboard
-kbd {
-    padding: $code-padding-y $code-padding-x;
-    @include font-size($code-font-size);
-    color: $kbd-color;
-    background-color: $kbd-bg;
-    @include border-radius($kbd-border-radius);
-    @include box-shadow($kbd-box-shadow);
-
-    kbd {
-        padding: 0;
-        font-size: 100%;
-        font-weight: $kbd-nested-font-weight;
-        @include box-shadow(none);
+@if $enable-code {
+    // Inline code
+    @if $enable-code-code {
+        code {
+            padding: $code-padding-y $code-padding-x;
+            @include font-size($code-font-size);
+            color: $code-color;
+            background-color: $code-bg;
+            @include border-radius($border-radius);
+        }
     }
-}
 
-// Blocks of code
-pre {
-    display: block;
-    @include font-size($code-font-size);
-    color: $pre-color;
+    // User input typically entered via keyboard
+    @if $enable-code-kbd {
+        kbd {
+            padding: $code-padding-y $code-padding-x;
+            @include font-size($code-font-size);
+            color: $kbd-color;
+            background-color: $kbd-bg;
+            @include border-radius($kbd-border-radius);
+            @include box-shadow($kbd-box-shadow);
 
-    // Account for some code outputs that place code tags in pre tags
-    code {
-        padding: 0;
-        font-size: inherit;
-        color: inherit;
-        background-color: transparent;
-        border-radius: 0;
+            kbd {
+                padding: 0;
+                font-size: 100%;
+                font-weight: $kbd-nested-font-weight;
+                @include box-shadow(none);
+            }
+        }
+    }
+
+    // Blocks of code
+    @if $enable-code-pre {
+        pre {
+            display: block;
+            @include font-size($code-font-size);
+            color: $pre-color;
+
+            // Account for some code outputs that place code tags in pre tags
+            code {
+                padding: 0;
+                font-size: inherit;
+                color: inherit;
+                background-color: transparent;
+                border-radius: 0;
+            }
+        }
     }
 }
