--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -246,9 +246,7 @@ pre,
 code,
 kbd,
 samp {
-    // stylelint-disable font-family-no-duplicate-names
-    font-family: monospace, monospace; // Correct the inheritance and scaling of font size in all browsers.
-    // stylelint-enable font-family-no-duplicate-names
+    font-family: $font-family-monospace;
     font-size: 1em; // Correct the odd `em` font sizing in all browsers.
 }
 
