--- a/scss/core/_root.scss
+++ b/scss/core/_root.scss
@@ -1,16 +1,24 @@
-:root {
-    // Custom variable values only support SassScript inside `#{}`.
-    @each $color, $value in $root-colors {
-        --color-#{$color}: #{$value};
-    }
+// Custom variable values only support SassScript inside `#{}`.
+@if $enable-root {
+    :root {
+        @if $enable-root-colors {
+            @each $color, $value in $root-colors {
+                --color-#{$color}: #{$value};
+            }
+        }
 
-    @each $bp, $value in $grid-breakpoints {
-        --breakpoint-#{$bp}: #{$value};
-    }
+        @if $enable-root-breakpoints {
+            @each $bp, $value in $grid-breakpoints {
+                --breakpoint-#{$bp}: #{$value};
+            }
+        }
 
-    // Use `inspect` for lists so that quoted items keep the quotes.
-    // See https://github.com/sass/sass/issues/2383#issuecomment-336349172
-    --font-family-sans-serif: #{inspect($font-family-sans-serif)};
-    --font-family-serif: #{inspect($font-family-serif)};
-    --font-family-monospace: #{inspect($font-family-monospace)};
+        @if $enable-root-fonts {
+            // Use `inspect` for lists so that quoted items keep the quotes.
+            // See https://github.com/sass/sass/issues/2383#issuecomment-336349172
+            --font-family-sans-serif: #{inspect($font-family-sans-serif)};
+            --font-family-serif: #{inspect($font-family-serif)};
+            --font-family-monospace: #{inspect($font-family-monospace)};
+        }
+    }
 }
