--- a/scss/core/_typography.scss
+++ b/scss/core/_typography.scss
@@ -1,79 +1,96 @@
 // stylelint-disable selector-list-comma-newline-after
 
-// Headings
-h1, .h1,
-h2, .h2,
-h3, .h3,
-h4, .h4,
-h5, .h5,
-h6, .h6 {
-    margin-bottom: $headings-margin-bottom;
-    font-family: $headings-font-family;
-    font-weight: $headings-font-weight;
-    line-height: $headings-line-height;
-    color: $headings-color;
-}
+@if $enable-typography {
+    // Headings
+    @if $enable-typography-headings {
+        h1, .h1,
+        h2, .h2,
+        h3, .h3,
+        h4, .h4,
+        h5, .h5,
+        h6, .h6 {
+            margin-bottom: $headings-margin-bottom;
+            font-family: $headings-font-family;
+            font-weight: $headings-font-weight;
+            line-height: $headings-line-height;
+            color: $headings-color;
+        }
 
-h1, .h1 { @include font-size($font-size-h1); }
-h2, .h2 { @include font-size($font-size-h2); }
-h3, .h3 { @include font-size($font-size-h3); }
-h4, .h4 { @include font-size($font-size-h4); }
-h5, .h5 { @include font-size($font-size-h5); }
-h6, .h6 { @include font-size($font-size-h6); }
+        h1, .h1 { @include font-size($font-size-h1); }
+        h2, .h2 { @include font-size($font-size-h2); }
+        h3, .h3 { @include font-size($font-size-h3); }
+        h4, .h4 { @include font-size($font-size-h4); }
+        h5, .h5 { @include font-size($font-size-h5); }
+        h6, .h6 { @include font-size($font-size-h6); }
+    }
 
-// Lead in
-.lead {
-    @include font-size($lead-font-size);
-    font-weight: $lead-font-weight;
-    line-height: $lead-line-height;
-}
+    // Lead in
+    @if $enable-typography-lead {
+        .lead {
+            @include font-size($lead-font-size);
+            font-weight: $lead-font-weight;
+            line-height: $lead-line-height;
+        }
+    }
 
-// Horizontal Rule
-hr {
-    margin-top: $hr-spacer-y;
-    margin-bottom: $hr-spacer-y;
-    border: 0;
-    border-top: $hr-border-width solid $hr-border-color;
-}
+    // Horizontal Rule
+    @if $enable-typography-hr {
+        hr {
+            margin-top: $hr-spacer-y;
+            margin-bottom: $hr-spacer-y;
+            border: 0;
+            border-top: $hr-border-width solid $hr-border-color;
+        }
+    }
 
-// Emphasis
-small,
-.small {
-    @include font-size($small-font-size);
-    font-weight: $font-weight-normal;
-}
+    // Emphasis
+    @if $enable-typography-small {
+        small,
+        .small {
+            @include font-size($small-font-size);
+            font-weight: $font-weight-normal;
+        }
+    }
 
-mark,
-.mark {
-    padding-right: $mark-padding-x;
-    padding-left: $mark-padding-x;
-    background-color: $mark-bg;
-}
+    @if $enable-typography-mark {
+        mark,
+        .mark {
+            padding-right: $mark-padding-x;
+            padding-left: $mark-padding-x;
+            background-color: $mark-bg;
+        }
+    }
 
-// Lists
-.list-unstyled {
-    @include list-unstyled;
-}
+    // Lists
+    @if $enable-typography-list-unstyled {
+        .list-unstyled {
+            @include list-unstyled;
+        }
+    }
 
-//  Abbr extension
-.initialism {
-    font-size: 90%;
-    text-transform: uppercase;
-}
+    //  Abbr extension
+    @if $enable-typography-initialism {
+        .initialism {
+            font-size: 90%;
+            text-transform: uppercase;
+        }
+    }
 
+    // Blockquotes
+    @if $enable-typography-blockquote {
+        .blockquote {
+            margin-bottom: $spacer;
+            @include font-size($blockquote-font-size);
+            color: $blockquote-color;
+        }
+        .blockquote-footer {
+            display: block;
+            @include font-size($blockquote-footer-font-size);
+            color: $blockquote-footer-color;
 
-// Blockquotes
-.blockquote {
-    margin-bottom: $spacer;
-    @include font-size($blockquote-font-size);
-    color: $blockquote-color;
-}
-.blockquote-footer {
-    display: block;
-    @include font-size($blockquote-footer-font-size);
-    color: $blockquote-footer-color;
-
-    &::before {
-        content: $blockquote-footer-content;
+            &::before {
+                content: $blockquote-footer-content;
+            }
+        }
     }
 }
