doc the table vars

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -581,8 +581,7 @@ $table-condensed-cell-padding:  .3125rem .5rem !default;
 $table-caption-color:           $uibase-500 !default;
 
 $table-bg:                  $component-bg !default;
-$table-bg-hover:            $component-hover-bg !default;
-$table-bg-active:           $table-bg-hover !default;
+$table-bg-active:           $component-hover-bg !default;
 $table-bg-active-hover:     $uibase-200 !default;
 
 $table-border-width:        $border-width !default;
